After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766794 - eglimage: Fails to compile because of compiler warning caused by unused function
eglimage: Fails to compile because of compiler warning caused by unused function
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal critical
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-23 12:55 UTC by Deyan
Modified: 2016-05-25 06:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
eglimage: Ensure that the debug category is always initalized (1.93 KB, patch)
2016-05-23 17:11 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Deyan 2016-05-23 12:55:30 UTC
Trying to compile gst-plugins-bad on a RPi3 using the latest git master, but there seems to be an issue.


pi@raspberrypi:~/Downloads/gst/gst-plugins-bad $ make -j1
make  all-recursive
make[1]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad'
Making all in gst-libs
make[2]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs'
Making all in gst
make[3]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst'
make -C interfaces
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/interfaces'
make  all-am
make[5]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/interfaces'
make[5]: Nothing to be done for 'all-am'.
make[5]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/interfaces'
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/interfaces'
make -C basecamerabinsrc
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/basecamerabinsrc'
make[4]: Nothing to be done for 'all'.
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/basecamerabinsrc'
make -C codecparsers
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/codecparsers'
make[4]: Nothing to be done for 'all'.
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/codecparsers'
make -C insertbin
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/insertbin'
make[4]: Nothing to be done for 'all'.
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/insertbin'
make -C uridownloader
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/uridownloader'
make[4]: Nothing to be done for 'all'.
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/uridownloader'
make -C mpegts
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/mpegts'
make  all-am
make[5]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/mpegts'
make[5]: Nothing to be done for 'all-am'.
make[5]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/mpegts'
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/mpegts'
make -C base
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/base'
make[4]: Nothing to be done for 'all'.
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/base'
make -C player
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/player'
make[4]: Nothing to be done for 'all'.
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/player'
make -C gl
make[4]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl'
Making all in glprototypes
make[5]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl/glprototypes'
make[5]: Nothing to be done for 'all'.
make[5]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl/glprototypes'
Making all in dispmanx
make[5]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl/dispmanx'
make[5]: Nothing to be done for 'all'.
make[5]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl/dispmanx'
Making all in egl
make[5]: Entering directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl/egl'
  CC       libgstgl_egl_la-gsteglimage.lo
gsteglimage.c:74:1: error: '_init_debug' defined but not used [-Werror=unused-function]
 _init_debug (void)
 ^
cc1: all warnings being treated as errors
Makefile:905: recipe for target 'libgstgl_egl_la-gsteglimage.lo' failed
make[5]: *** [libgstgl_egl_la-gsteglimage.lo] Error 1
make[5]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl/egl'
Makefile:1393: recipe for target 'all-recursive' failed
make[4]: *** [all-recursive] Error 1
make[4]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst/gl'
Makefile:1080: recipe for target 'gl' failed
make[3]: *** [gl] Error 2
make[3]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs/gst'
Makefile:791: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad/gst-libs'
Makefile:968: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/pi/Downloads/gst/gst-plugins-bad'
Makefile:896: recipe for target 'all' failed
make: *** [all] Error 2
Comment 1 Sebastian Dröge (slomo) 2016-05-23 17:11:54 UTC
Created attachment 328398 [details] [review]
eglimage: Ensure that the debug category is always initalized

Before the initializer was only run if dmabuf support was used.
Comment 2 Sebastian Dröge (slomo) 2016-05-25 06:46:50 UTC
Attachment 328398 [details] pushed as b730f7e - eglimage: Ensure that the debug category is always initalized